[tool.poetry]
name = "litepcie_acorn"
version = "0.1.0"
description = ""
authors = ["Ilia Sergachev <ilia.sergachev@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
litex = {path = "litex", develop = true}
litepcie = {path = "litepcie", develop = true}
pythondata-cpu-vexriscv = "*"
pythondata-software-picolibc = "*"
meson = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
